--- a/pixel-art/styles.css
+++ b/pixel-art/styles.css
@@ -1,15 +1,17 @@
+/* change columns and rows and make px the same as pixel */
 #pixelGrid {
   display: grid;
-  grid-template-columns: repeat(16, 20px);
-  grid-template-rows: repeat(16, 20px);
+  grid-template-columns: repeat(32, 15px);
+  grid-template-rows: repeat(32, 15px);
   gap: 0px;
   background-color: #ddd;
   padding: 10px;
 }
 
+/* original width: 20px height: 20px */
 .pixel {
-  width: 20px;
-  height: 20px;
+  width: 15px;
+  height: 15px;
   background-color: white;
   border: 1px solid rgba(0, 0, 0, 0.25);
   cursor: pointer;
