--- a/pixel-art/styles.css
+++ b/pixel-art/styles.css
@@ -18,20 +18,55 @@
 }
 
 #saveButton, #loadButton {
-    position: relative;
-    top: -4px;
-    margin: 7px;
-    padding: 7px;
-    background-color: #4CAF50;
-    color: white;
-    border-radius: 5px;   
+  position: relative;
+  top: -4px;
+  margin: 7px;
+  padding: 7px;
+  background-color: #4CAF50;
+  color: white;
+  border-radius: 5px;   
 }
   
 #saveButton:hover, #loadButton:hover {
-    background-color: #45a049;
+  background-color: #45a049;
 }
 
 #colorPicker {
-    height: 30px;
+  height: 30px;
+}
+
+#eraser {
+  position: relative;
+  top: -4px;
+  margin: 7px;
+  padding: 7px;
+  background-color: #e77777;
+  color: white;
+  border-radius: 5px;  
+  box-shadow: 2px 2px 5px #444, -2px -2px 5px #cf7272;
+}
+
+#eraser.active {
+  background-color: #7f0000;
+  box-shadow: inset 2px 2px 5px #a44848, inset -2px -2px 5px #8d4a4a;
 }
   
+#undoButton {
+  position: relative;
+  top: -4px;
+  margin: 7px;
+  padding: 7px;
+  background-color: #1de5f4;
+  color: white;
+  border-radius: 5px;   
+}
+
+#redoButton {
+  position: relative;
+  top: -4px;
+  margin: 7px;
+  padding: 7px;
+  background-color: #2f00a6;
+  color: white;
+  border-radius: 5px;   
+}
